header and nav css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,44 @@
-<<<<<<< HEAD
-body{
-    font-family: Helvetica, Arial, sans-serif:
-    background-color: tomato;
-=======
-body{
-    font-family: Helvetica, Arial, sans-serif:
-    background-color: tomato;
->>>>>>> f4705f09a6615a42fd20e80a940d9209e0a494f3
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+    color: #39a6b2;
+    font-family: Helvetica, Arial, sans-serif;
+  }
+
+/* apply styles to <header> */
+
+header {
+  padding: 20px 35px;
+  background-color: #39a6b2;
+}
+
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  color: #fce138;
+  margin: 0;
+  display: inline;
+}
+
+header a {
+  text-decoration: none;
+  color: #fce138;
+}
+
+header nav {
+  float: right;
+  margin: 7px 0 7px;
+}
+
+header nav ul li {
+  display: inline;
+}
+
+header nav ul li a {
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 22px;
 }
